view of tracks on mobile devices was fixed

--- a/music-cloud-web/src/main/web/src/app/components/home/home.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/home/home.component.css
@@ -8,6 +8,48 @@
 .home__content {
 }
 
+.track-item {
+    list-style-type:none;
+    margin: 0px 0px 0px 0px;
+}
+
+.track-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.track__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.track__info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.track-list {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.rate {
+    width: 120px;
+}
+
+.audio-player {
+    width: 100%;
+}
+
+.item {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 @media screen and (min-width: 481px) {
     .home {
         display: flex;
@@ -23,28 +65,21 @@
         min-height: 100%;
         width: 70%;
     }
-}
 
-.track-item {
-    margin-top: 20px;
-    margin-bottom: 30px;
-}
+    .track-list {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 
-.track-title {
-    display: flex !important;
-    justify-content: space-between;
-    align-items: center;
-}
+    .track-item {
+        list-style-type:none;
+        margin: 0px 0px 0px 0px;
+    }
 
-.item {
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.rate {
-    width: 120px;
-}
-
-.audio-player {
-    width: 100%;
+    .track-title {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+    }
 }
